Fix markup to ensure the form is rendered correctly. Fixes TA-433.

--- a/Frameworks/D2W/ERModernDirectToWeb/Components/Nonlocalized.lproj/ERMDDebuggingHelp.wo/ERMDDebuggingHelp.html
+++ b/Frameworks/D2W/ERModernDirectToWeb/Components/Nonlocalized.lproj/ERMDDebuggingHelp.wo/ERMDDebuggingHelp.html
@@ -68,21 +68,22 @@
             <td>Rule tracing</td>
             <td>Turn <webobject name = "ToggleRuleTracingLink" /></td>
           </tr>
-          <webobject name = "Form1">
-            <tr>
-              <td>D2W Key 
+          <tr>
+            <td>D2W Key 
+              <webobject name = "Form1">
                 <webobject name = "d2wKeyObserver"><webobject name = "TextField1" /></webobject>
-                has value</td>
-              <td>
-                <webobject name = "d2wKeyUC">
-                  <webobject name = "isKeyEmpty"><webobject name = "D2WContextInspector" /></webobject>
-                  <webobject name = "isKeyNotEmpty">
-                    <pre><webobject name = "DebugValueForKey"/></pre>
-                  </webobject>
+                has value 
+              </webobject>
+            </td>
+            <td>
+              <webobject name = "d2wKeyUC">
+                <webobject name = "isKeyEmpty"><webobject name = "D2WContextInspector" /></webobject>
+                <webobject name = "isKeyNotEmpty">
+                  <pre><webobject name = "DebugValueForKey"/></pre>
                 </webobject>
-              </td>
-            </tr>
-          </webobject>
+              </webobject>
+            </td>
+          </tr>
         </table>
       </webobject>
     </div>
