--- a/Frameworks/D2W/ERModernDirectToWeb/Components/Nonlocalized.lproj/ERMDPageActionControllerButton.wo/ERMDPageActionControllerButton.html
+++ b/Frameworks/D2W/ERModernDirectToWeb/Components/Nonlocalized.lproj/ERMDPageActionControllerButton.wo/ERMDPageActionControllerButton.html
@@ -7,17 +7,19 @@
             <span><webobject name = "BranchButton2Label" /></span>
           </webobject>
         </webobject>
-        <webobject name = "NotUseAjaxSubmitButton"> <webobject name = "BranchButton" /> </webobject>
+        <webobject name = "NotUseAjaxSubmitButton"> <webobject name = "BranchButton" /></webobject>
       </li>
     </webobject>
   </webobject>
   <webobject name = "DebuggingEnabled">
-    <a class = "D2WPropertyDebugInfoToolTip">?<span><table class = "D2WPropertyDebugInfo">
+    <a class = "D2WPropertyDebugInfoToolTip">?<span>
+        <table class = "D2WPropertyDebugInfo">
           <tr>
             <th>Branch delegate</th>
-            <td><webobject name = "branchDelegateClass"/></td>
+            <td><webobject name = "branchDelegateClass" /></td>
           </tr>
-      </table></span>
+        </table>
+      </span>
     </a>
   </webobject>
 </webobject>
