--- a/Frameworks/D2W/ERModernLook/Components/Nonlocalized.lproj/ERMODQueryPage.wo/ERMODQueryPage.html
+++ b/Frameworks/D2W/ERModernLook/Components/Nonlocalized.lproj/ERMODQueryPage.wo/ERMODQueryPage.html
@@ -1,37 +1,17 @@
 <webobject name = "PageWrapper">
   <webobject name = "RequiredWrapper">
     <webobject name = "ShowTopActionBlock">
-      <webobject name = "TopActionBlock">
-      <webobject name = "ShouldShowDefaultPageButtons">
-        <ul class = "ActionList">
-          <webobject name = "ShowCancel">
-            <li><webobject name = "ReturnButton" /></li>
-          </webobject>
-          <li><webobject name = "ClearButton" /></li>
-          <li><webobject name = "QueryButton" /></li>
-        </ul>
-        </webobject>
-        <webobject name = "ActionBar" />
-        <webobject name = "Controller" />
-      </webobject>
+      <webobject name = "TopActionBlock"> <webobject name = "Actions" /> </webobject>
     </webobject>
-    <webobject name = "InnerWrapper"><webobject name = "ErrorBlock"/> <webobject name = "QueryPageRepetition" /> </webobject>
+    <webobject name = "InnerWrapper">
+      <webobject name = "ErrorBlock" />
+      <webobject name = "QueryPageRepetition" />
+    </webobject>
     <webobject name = "ShowBottomActionBlock">
-      <webobject name = "BottomActionBlock">
-      <webobject name = "ShouldShowDefaultPageButtons">
-        <ul class = "ActionList">
-          <webobject name = "ShowCancel">
-            <li><webobject name = "ReturnButton" /></li>
-          </webobject>
-          <li><webobject name = "ClearButton" /></li>
-          <li><webobject name = "QueryButton" /></li>
-        </ul>
-        </webobject>
-        <webobject name = "ActionBar" />
-        <webobject name = "Controller" />
-      </webobject>
+      <webobject name = "BottomActionBlock"> <webobject name = "Actions" /> </webobject>
     </webobject>
-    <webobject name = "ShowList"><hr class="queryList"/>
+    <webobject name = "ShowList">
+      <hr class = "queryList" />
       <webobject name = "ShowResults"> <webobject name = "ListPage" /> </webobject>
     </webobject>
   </webobject>
