--- a/Frameworks/Ajax/ERCoolComponents/Components/Nonlocalized.lproj/CCDatePicker.wo/CCDatePicker.html
+++ b/Frameworks/Ajax/ERCoolComponents/Components/Nonlocalized.lproj/CCDatePicker.wo/CCDatePicker.html
@@ -1,2 +1,5 @@
 <webobject name = "DateField"/>
+<webobject name = "isDisableInput">
+	<webobject name = "HiddenDateField"/>
+</webobject>
 <script type="text/javascript"><webobject name = "DatePickerCreateScript"/></script>
