Instead of attempting to retrieve the raw value from the request by guessing the element ID, use an additional hidden input without a formatter.

--- a/Frameworks/Ajax/ERCoolComponents/Components/Nonlocalized.lproj/CCDatePicker.wo/CCDatePicker.html
+++ b/Frameworks/Ajax/ERCoolComponents/Components/Nonlocalized.lproj/CCDatePicker.wo/CCDatePicker.html
@@ -1,4 +1,5 @@
 <webobject name = "DateField"/>
+<webobject name = "RawValueField"/>
 <webobject name = "isDisableInput">
 	<webobject name = "HiddenDateField"/>
 </webobject>
