Allow choice of displaying attribute-level validation messages just above the targeted property. To enable, "shouldDisplayValidationExceptionsInline" has to be true. TODO: Still very much WIP, awaiting a major spring-cleaning. Validation is scattered between ERD2WPage, ValidationDelegate and now ERD2WContext.

--- a/Frameworks/D2W/ERModernDirectToWeb/Components/Nonlocalized.lproj/ERMDInspectPageRepetition.wo/ERMDInspectPageRepetition.html
+++ b/Frameworks/D2W/ERModernDirectToWeb/Components/Nonlocalized.lproj/ERMDInspectPageRepetition.wo/ERMDInspectPageRepetition.html
@@ -17,6 +17,17 @@
                 </webobject>
               </webobject>
               <webobject name = "AttributeWrapper">
+                <webobject name = "ShouldDisplayValidationErrorsInline">
+					<webobject name = "HasErrorsConditional">
+						<webobject name = "ErrorBlockDiv">
+						<ul class="CCErrorDictionaryPanel">
+						    <webobject name = "DictionaryRepetition">
+						      <li><webobject name = "ErrorMessageItem" /></li>
+						    </webobject>
+						</ul>
+		                </webobject>
+					</webobject>
+				</webobject>
                 <span>
                   <webobject name = "shouldObserve">
 	                  <webobject name = "SafeWrapper"><webobject name = "AjaxObserveField"><webobject name = "AttributeValue" /></webobject></webobject>
