--- a/Frameworks/D2W/ERModernLook/Components/Nonlocalized.lproj/ERMODInspectPage.wo/ERMODInspectPage.html
+++ b/Frameworks/D2W/ERModernLook/Components/Nonlocalized.lproj/ERMODInspectPage.wo/ERMODInspectPage.html
@@ -8,7 +8,7 @@
     </webobject>
     <webobject name = "InnerWrapper">
       <webobject name = "AboveDisplayPropertyKeys" />
-      <webobject name = "ErrorBlock" />
+      <webobject name = "ShouldNotDisplayValidationErrorsInline"><webobject name = "ErrorBlock" /></webobject>
       <webobject name = "InspectPageRepetition" />
       <webobject name = "useFocus">
         <webobject name = "IsEditing"><webobject name = "Script" /></webobject>
