--- a/Frameworks/D2W/ERModernLook/Components/Nonlocalized.lproj/ERMODTabInspectPage.wo/ERMODTabInspectPage.html
+++ b/Frameworks/D2W/ERModernLook/Components/Nonlocalized.lproj/ERMODTabInspectPage.wo/ERMODTabInspectPage.html
@@ -8,7 +8,7 @@
     </webobject>
     <webobject name = "TabPanel">
       <webobject name = "InnerWrapper">
-        <webobject name = "ErrorBlock"/>
+        <webobject name = "ShouldNotDisplayValidationErrorsInline"><webobject name = "ErrorBlock" /></webobject>
         <webobject name = "AboveDisplayPropertyKeys" />
         <webobject name = "InspectPageRepetition" />
         <webobject name = "useFocus">
