--- a/Frameworks/D2W/ERModernLook/Components/Nonlocalized.lproj/ERMODWizardCreationPage.wo/ERMODWizardCreationPage.html
+++ b/Frameworks/D2W/ERModernLook/Components/Nonlocalized.lproj/ERMODWizardCreationPage.wo/ERMODWizardCreationPage.html
@@ -5,7 +5,7 @@
       <webobject name = "ShowBanner">
         <webobject name = "BannerDiv"> <webobject name = "BannerComponent" /> </webobject>
       </webobject>
-      <webobject name = "ErrorBlock" />
+      <webobject name = "ShouldNotDisplayValidationErrorsInline"><webobject name = "ErrorBlock" /></webobject>
       <webobject name = "InspectPageRepetition" />
       <webobject name = "BelowDisplayPropertyKeys" />
     </webobject>
