remove page buttons rename BottomActions to PageActions remove  'editAction' method

--- a/Frameworks/D2W/ERModernLook/Components/Nonlocalized.lproj/ERMODInspectPage.wo/ERMODInspectPage.html
+++ b/Frameworks/D2W/ERModernLook/Components/Nonlocalized.lproj/ERMODInspectPage.wo/ERMODInspectPage.html
@@ -2,18 +2,7 @@
   <webobject name = "RequiredWrapper">
     <webobject name = "ShowTopActionBlock">
       <webobject name = "TopActionBlock">
-        <webobject name = "ShouldShowDefaultPageButtons">
-          <ul class = "ActionList">
-            <webobject name = "IsNotEditingConditional">
-              <webobject name = "ShowCancel">
-                <li><webobject name = "ReturnButton" /></li>
-              </webobject>
-              <webobject name = "IsObjectEditable">
-                <li><webobject name = "EditButton" /></li>
-              </webobject>
-            </webobject>
-          </ul>
-        </webobject>
+        <webobject name = "PageActions" />
         <webobject name = "SecondaryActionBlock" />
       </webobject>
     </webobject>
@@ -29,19 +18,7 @@
     <div class = "InnerClear"></div>
     <webobject name = "ShowBottomActionBlock">
       <webobject name = "BottomActionBlock">
-        <webobject name = "BottomActions" />
-        <webobject name = "ShouldShowDefaultPageButtons">
-          <ul class = "ActionList">
-            <webobject name = "IsNotEditingConditional">
-              <webobject name = "ShowCancel">
-                <li><webobject name = "ReturnButton" /></li>
-              </webobject>
-              <webobject name = "IsObjectEditable">
-                <li><webobject name = "EditButton" /></li>
-              </webobject>
-            </webobject>
-          </ul>
-        </webobject>
+        <webobject name = "PageActions" />
         <webobject name = "SecondaryActionBlock" />
       </webobject>
     </webobject>
