Make the ERMODPickListPage handle batching. This commit also changes the behaviour of the ERD2WPickListPage in that "selectAllOnPage()" now does only add the objects on the page to the existing selection, instead of making the objects on the page the only selected objects as before.

--- a/Frameworks/D2W/ERModernDefaultSkin/WebServerResources/default_screen_stylesheet.css
+++ b/Frameworks/D2W/ERModernDefaultSkin/WebServerResources/default_screen_stylesheet.css
@@ -707,7 +707,10 @@ ul.L2WithChildren li.Nav2Selected {
 
 .InnerWrapper {
 	padding-top:  20px;
-	border-top: 1px solid #f5f5f5;
+}
+
+#PageHelp {
+	margin-bottom: 15px;
 }
 
 .EmbeddedEditRelationshipInnerWrapper,
@@ -1233,9 +1236,10 @@ span.ErrorLabel {
 }
 
 .TopBatchSize {
-	position: absolute;
-	top: 4px;
-	right: 50px;
+	float: right;
+	position: relative;
+	bottom: 32px;
+	margin-bottom: -20px;
 }
 
 .ERDBatchSize_Wrapper {
