--- a/Frameworks/D2W/ERModernDirectToWeb/Components/Nonlocalized.lproj/ERMDEmptyListMessage.wo/ERMDEmptyListMessage.html
+++ b/Frameworks/D2W/ERModernDirectToWeb/Components/Nonlocalized.lproj/ERMDEmptyListMessage.wo/ERMDEmptyListMessage.html
@@ -1,8 +1,10 @@
 <div class = "ERMDEmptyList">
-  <span class = "ERMDEmptyListMessage">
-    <webobject name = "HasNoMessage"><webobject name = "EmptyListTemplate" /></webobject>
-    <webobject name = "HasMessage"><webobject name = "EmptyListMessage" /></webobject>
-  </span>
+  <webobject name = "Span">
+    <span class = "ERMDEmptyListMessage">
+      <webobject name = "HasNoMessage"><webobject name = "EmptyListTemplate" /></webobject>
+      <webobject name = "HasMessage"><webobject name = "EmptyListMessage" /></webobject>
+    </span>
+  </webobject>
   <webobject name = "ShowCreateObjectLink">
     <span class = "ERMDEmptyListCreateObject">
       <webobject name = "CreateObjectLink">
