Implement hotkey navigation for ERMD2WBatchNavigationBar. Use batchNavNextHotkey and batchNavPreviousHotkey to define the key bindings and make sure to limit the rule to list page configurations, i.e. pages containing only a single instance of ERMD2WBatchNavigationBar.

--- a/Frameworks/D2W/ERModernDirectToWeb/Components/Nonlocalized.lproj/ERMD2WBatchNavigationBar.wo/ERMD2WBatchNavigationBar.html
+++ b/Frameworks/D2W/ERModernDirectToWeb/Components/Nonlocalized.lproj/ERMD2WBatchNavigationBar.wo/ERMD2WBatchNavigationBar.html
@@ -19,6 +19,9 @@
 			</webobject>
 			<webobject name = "HasNoNextPageConditional"><span class="paginatorAtEnd"><webobject name="NextLabel"/></span></webobject>
 		</div>
+		<webobject name = "hasHotkeys">
+		    <webobject name = "KeyboardNavScript"></webobject>
+		</webobject>
 	</webobject>
 	<webobject name = "False">
 	<div class="paginatorResults">(<webobject name = "ShowPageRange"><webobject name = "FirstIndex"/>&#8211;<webobject name = "LastIndex"/> <webobject name = "OfLabel"/> </webobject><webobject name = "DisplayName"/>)</div>
