Always display the ERDSelectionComponent when a list page with subTask "pick" is shown.

--- a/Frameworks/D2W/ERModernDirectToWeb/Components/Nonlocalized.lproj/ERMDSimpleListPageRepetition.wo/ERMDSimpleListPageRepetition.html
+++ b/Frameworks/D2W/ERModernDirectToWeb/Components/Nonlocalized.lproj/ERMDSimpleListPageRepetition.wo/ERMDSimpleListPageRepetition.html
@@ -3,6 +3,7 @@
     <webobject name = "IsRenderTableHeader">
       <thead><webobject name = "ObjectTableHeaderRow">
         <webobject name = "HasLeftActionsConditional"><th class="ActionCell LftActionCell"><webobject name = "HasNoRightActionsConditional"><webobject name = "ColumnSelector"/></webobject>&nbsp;</th></webobject>
+        <webobject name = "isSubTaskPick"><th class="ActionCell LftActionCell"></th>&nbsp;</webobject>
         <webobject name = "SectionRepetition">
           <webobject name = "ColumnLabelRepetition">
             <webobject name = "IsNotOmitted">
@@ -25,6 +26,11 @@
           </webobject>
         </ul>
       </td>
+      <webobject name = "isSubTaskPick">
+      <td>
+      	<webobject name = "checkBox"></webobject>
+      </td>
+      </webobject>
       </webobject>
       <webobject name = "SectionRepetition">
         <webobject name = "AttributeRepetition">
